[build-system]
Obuild-backend = "setuptools.build_meta"
requires = ["setuptools>65.5.1", "wheel>0.38.1", "pip>=21.0.0"]
[tool.black]
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tmp
'''
include = '\.pyi?$'
target-version = ['py36', 'py37', 'py38']

[tool.isort]
indent = '    '
profile = 'black'
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'

[tool.pyright]
extraPaths = ['tests']